docs-site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdscope-docs
spec:
  selector:
    app: crowdscope-docs
  ports:
    - port: 80
      targetPort: 4321
